week preview alternate star moved to top (fixes #24), swap apps and events, make event descriptions not have ugly scrollbar

--- a/css/events.css
+++ b/css/events.css
@@ -25,7 +25,5 @@
 .event-description {
   font-size: 16px;
   color: rgba(255, 255, 255, 0.6);
-  max-height: 100px;
-  overflow: auto;
   display: block;
 }
