--- a/css/week-preview.css
+++ b/css/week-preview.css
@@ -31,3 +31,10 @@
 .week-preview-transparent {
   background-color: rgba(0, 0, 0, 0.1);
 }
+.week-preview-alternate {
+  visibility: hidden;
+  height: 6px;
+}
+.week-preview-is-alternate .week-preview-alternate {
+  visibility: visible;
+}
